<resources>
    <string name="app_name">Avalia Gourmet App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="txtCEP">CEP</string>
    <string name="btnBuscar">Buscar</string>
    <string name="txtLogradouro">Logradouro</string>
    <string name="txtComplemento">Complemento</string>
    <string name="txtBairro">Bairro</string>
    <string name="txtLocalidade">Localidade</string>
    <string name="txtUf">UF</string>
    <string name="txtIbge">IBGE</string>
    <string name="txtGia">Gia</string>
    <string name="msgOk">Ok</string>
    <string name="title_activity_maps">Map</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>