<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_cinza"
    android:orientation="vertical"
    tools:context=".CepActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AvaliaGourmetApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AvaliaGourmetApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:focusable="false"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/logovc" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtCEP"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/txtCEP"
                android:inputType="number|text"
                android:maxLength="9" />

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="#2b961f"
                android:drawableLeft="@drawable/ic_search"
                android:gravity="center"
                android:onClick="buscarCEP"
                android:text="@string/btnBuscar"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtLogradouro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/txtLogradouro"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/txtBairro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/txtBairro" />

        <EditText
            android:id="@+id/txtLocalidade"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/txtLocalidade" />

        <EditText
            android:id="@+id/txtUf"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/txtUf" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="#008000"
            android:gravity="center"
            android:onClick="confirmarEndereco"
            android:text="Confirmar"
            android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>